--- a/aula-2/desafio/pom.xml
+++ b/aula-2/desafio/pom.xml
@@ -45,5 +45,11 @@
             <version>1.18.38</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-nop</artifactId>
+            <version>1.7.36</version>
+        </dependency>
     </dependencies>
 </project>
